<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_left"
        android:textSize="16sp"
        android:textColor="@color/text_gray"
        android:gravity="center_horizontal" />

    <NumberPicker
        android:id="@+id/np"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        tools:targetApi="honeycomb"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/date_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:background="@drawable/button_left" />

        <Button
            android:id="@+id/date_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:background="@drawable/button_right" />

    </LinearLayout>

</LinearLayout>
