<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">

        <Button
            android:id="@+id/trojans_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_back_trunk"
            android:text="@string/trojans"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:drawablePadding="10dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_below="@id/rl"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notrojans"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/clicktoclean"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:background="@drawable/bg_cancel_selector"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:enabled="false" />


</RelativeLayout>
