<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_left"
        android:textSize="16sp"
        android:textColor="@color/text_gray"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">
        <EditText
            android:id="@+id/et_day"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="请输入天数"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:numeric="integer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="天"
            android:textSize="14sp"
            android:textColor="@color/text_gray"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/date_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:background="@drawable/button_left" />

        <Button
            android:id="@+id/date_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:background="@drawable/button_right" />

    </LinearLayout>

</LinearLayout>
