<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">

        <Button
            android:id="@+id/bt_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_back_trunk"
            android:text="@string/more"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:drawablePadding="5dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/view_gray" />

    <RelativeLayout
        android:id="@+id/rl_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:clickable="true"
        android:background="@drawable/antivirus_item_selecter">
        <TextView
            android:id="@+id/tv_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluation"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_over"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/view_gray" />

    <RelativeLayout
        android:id="@+id/rl_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:clickable="true">
        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:layout_centerVertical="true" />
        <ImageView
            android:id="@+id/iv_notice_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/switch_open"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/view_gray" />

</LinearLayout>
